--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.263.1",
+    "ndarray": "^1.0.19",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
