--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.79.4",
     "@react-three/fiber": "^8.13.5",
     "@types/node": "20.4.5",
