--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.79.4",
     "@react-three/fiber": "^8.13.5",
@@ -22,6 +23,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.263.1",
+    "nanoid": "^4.0.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
