--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon",
+    "build": "rimraf build && tsc",
+    "start": "npm run build && node build/server.js"
   },
   "author": "Glen Lee",
   "license": "ISC",
